...
      active: true,
      conversationId: '1',
      createdAt: date,
      id: v4(),
      message: textField.trim(),
      updatedAt: date,
      userId: 'User bob',
    };
    dispatch(createChatMessage(message));
  }, [dispatch, textField]);

  return (
    <View
...
      <Input
        flex
        focusOnMount
        hideError
        onChangeText={onMessageChange}
        onSubmitEditing={onSubmit}
        placeholder="Write something..."
        value={textField}
      />
      <Pressable
        disabled={!submittable}
        onPress={onSubmit}
      >
...
