...
  noFlex,
  onLayout,
  onLongPress,
  onPress,
  testID,
}: Properties) => {
  const colors = useColors();
  const dropShadow = useDropShadow();
  const currentTheme = useAppSelector((state) => state.theme.currentTheme);
  const shadow = elevation ? dropShadow(elevation) : {};
  const opacity = getOpacity(elevation);
  const styles = StyleSheet.create({
    container: {
      flex: noFlex ? 0 : 1,
    },
    content: {
      backgroundColor:
        currentTheme === 'light'
          ? colors.background.primaryA
          : `hsla(0,0%,100%,${opacity})`,
      borderColor: colors.background.primaryA,
      borderRadius: spacing(2),
      borderWidth: 1,
      flex: noFlex ? 0 : 1,
...
