...
            <Button emphasis="high" color="secondary" title="secondary" />
            <Button emphasis="high" color="success" title="success" />
            <Button emphasis="high" color="danger" title="danger" />
            <Button emphasis="high" color="warning" title="warning" />
            <Button emphasis="high" color="info" title="info" />
            <Button emphasis="high" color="light" title="light" />
            <Button emphasis="high" color="dark" title="dark" />
            <Button emphasis="high" color="text" title="text" />
            <Button emphasis="high" title="default" />
            <Button emphasis="high" title="disable" disable />
            <Button
              emphasis="high"
              title="drop shadow"
...
